# BR-SAScore

./: Demo.ipynb  LICENSE  README.md  setup.cfg
BRSAScore/: BRSAScore.py  __init__.py
R2SAScore/: R2SAScore.py  __init__.py
data/: retro_star.route  test_set.csv
scripts/: prepare_R2SAScore.py  prepare_Scores.py  reaction_center_extractor.py
