[metadata]
name = BRSAScore
version = 0.1.0
packages = find_packages()
description = Reaction and Resource-aware SAScore
author = Shuan Chen
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >= 3.6
zip_safe = False
include_package_data = True
install_requires =
    numpy>=1.16.4
    matplotlib>=3.3.4
    rdkit-pypi>=2021

[options.package_data]
BRSAScore =
    pickle/*